[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "terraink_py"
version = "0.1.0"
description = "Standalone Python CLI for generating styled OSM map posters as PNG and SVG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.4.0",
]

[project.scripts]
terraink = "terraink_py.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
terraink_py = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["terraink_py*"]
